# DarwinWalking-Repository

Developing/: AttitudeEstimation.cpp  AttitudeEstimation.h  CaptureStep.h  Kalman.cpp  Kalman.h  Makefile  Matrix  MotionPattern.cpp  Omniwalk.cpp  Omniwalk.h  TauraWalking.cpp  TauraWalking.h  main.cpp  marcha  newmatrix  util.h
LastWorkingCode/: AttitudeEstimation.cpp  CaptureStep.cpp  MotionPattern.h  (+6 more)
bender/workspace/WolvesAI/src/: CMakeLists.txt  Config.h  LEDs.cpp  Makefile  cmake_install.cmake  mainpage.dox
bender/workspace/WolvesAI/src/Blackboard/: Blackboard.cpp  Blackboard.h
bender/workspace/WolvesAI/src/Body/: Body.h  BodyCommunicator.cpp  BodyCommunicator.h  PanTiltUnit.h  SimulationCommunicator.h
bender/workspace/WolvesAI/src/Communication/: MitecomCommunicator.cpp  MitecomHandler.cpp  MitecomHandler.h
bender/workspace/WolvesAI/src/Debugging/: DebugDrawer.cpp  Debugger.h  PacketListener.h  RobotAudio.h
bender/workspace/WolvesAI/src/Debugging/Services/: BodyDataService.h  BotControlService.h  HistogramService.h
bender/workspace/WolvesAI/src/Messages/: BodyAction.pb.cc  BodyAction.pb.h  ConfigDescriptions.pb.cc  FieldLines.proto  Histogram.pb.h  Line.proto  Object.pb.h  ObjectList.pb.cc  PointCloud.pb.h  ProtoBufFrame.pb.h  Representations.pb.cc  ServoStatus.pb.h  ServoStatus.proto
bender/workspace/WolvesAI/src/ModuleManager/: Module.h  ModuleManager.h  RegistrationInterface.h
bender/workspace/WolvesAI/src/Modules/: BodyController.cpp  BodyController.h
bender/workspace/WolvesAI/src/Modules/Behavior/: BehaviorConstants.h  BehaviorDefender.cpp  BehaviorGoalie.h  BehaviorStriker.cpp  FieldRunner.cpp  RemoteBehavior.cpp
bender/workspace/WolvesAI/src/Modules/ImageSources/: CaptureV4L1.h  CaptureV4L2.cpp  ConvertOpenCV.h  PBFLoader.h
bender/workspace/WolvesAI/src/Modules/Localization/: GlobalModeling.h
bender/workspace/WolvesAI/src/Modules/Support/: GoalFind.cpp  GoalFind.h  GoalSideBackground.cpp  GoalSideBackground.h  GoalSideHistogramPredictor.h  GoalSidePrediction.h  GoalSidePredictor_MD.cpp  HorizonDetection.cpp
bender/workspace/WolvesAI/src/Modules/Vision/: BackgroundScan.cpp  BallDetection.h  BallDetectionOpenCV.h  FieldDetection.cpp  FieldDetection.h  GoalieDetection.cpp  GoalieDetection.h  ImageWriter.h  MJPEGStreamer.h  VisionAnalyzer.cpp
bender/workspace/WolvesAI/src/Network/: GameControllerServer.h  HTTPServer.cpp
bender/workspace/WolvesAI/src/Representations/: BehaviorStatus.cpp  BehaviorStatus.h  BodyStatus.cpp  ConfigDescriptions.cpp  FieldLines.h  GameStatus.h  GoalSideView.cpp  GoalSideView.h  KickStatus.h  Line.cpp  ObjectList.cpp  OpenCVImage.cpp  OpenCVImage.h  Point.cpp  PointCloud.cpp  RobotConfiguration.h  STLVector.h  ServoStatus.cpp  ServoStatus.h  TestRepresentation.cpp  YUVImage.cpp
bender/workspace/WolvesAI/src/Utils/: Constants.h  DataConversion.h
bender/workspace/WolvesAI/src/Utils/Clustering/LeastSquare/: LeastSquareCircle.cpp  LeastSquareLine.cpp
bender/workspace/WolvesAI/src/Utils/Clustering/Ransac/Data/: Matrix3x3.cpp
bender/workspace/WolvesAI/src/Utils/Clustering/Ransac/Models/: AbstractModel.h  CircleModel.cpp
bender/workspace/WolvesAI_Brasil2015/test/: CMakeLists.txt
bender/workspace/WolvesAI_Brasil2015/test/images/: 20130424-171243.pbf  20130424-171314.pbf  20130424-171543.pbf  20130424-171546.pbf
bender/workspace/WolvesAI_Brasil2015/test/unit/: BlackboardTest.cpp
(+753 files in other folders)
