FILE (GLOB_RECURSE project_SRCS *.cpp *.cxx *.cc *.C *.c *.h *.hpp)
IF(${USE_OPENCV})
	SET (project_LIBS ${JPEG_LIBRARIES} ${PROTOBUF_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT} ${OpenCV_LIBS})
ELSE()
	SET (project_LIBS ${JPEG_LIBRARIES} ${PROTOBUF_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT})
ENDIF(${USE_OPENCV})


#
# Add Robotaudio Libraries 
#
IF(${ROBOTAUDIO})
	LIST( APPEND project_LIBS ${SFML_LIBRARIES})
ENDIF(${ROBOTAUDIO})



IF (${WIN32})
LIST( APPEND project_LIBS "ws2_32")
ENDIF (${WIN32})

SET (project_BIN ${PROJECT_NAME})

add_definitions(-DSYSTEM_X86)
SET( CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} ${GCC_COVERAGE_COMPILE_FLAGS}" )
SET( CMAKE_EXE_LINKER_FLAGS  "${CMAKE_EXE_LINKER_FLAGS} ${GCC_COVERAGE_LINK_FLAGS}" )

PROTOBUF_GEN_CPP(PROTO_SRCS PROTO_HDRS ${MAINFOLDER}/src/Messages ${MAINFOLDER}/src/Messages)

ADD_EXECUTABLE(${project_BIN} ${project_SRCS} ${PROTO_SRCS} ${PROTO_HDRS})
TARGET_LINK_LIBRARIES(${project_BIN} ${project_LIBS})
SET_TARGET_PROPERTIES(${project_BIN} PROPERTIES VERSION "${APPLICATION_VERSION_MAJOR}.${APPLICATION_VERSION_MINOR}" OUTPUT_NAME ${project_BIN} CLEAN_DIRECT_OUTPUT 1)

INSTALL(TARGETS ${project_BIN} DESTINATION bin)
